--- a/Module 15/positions.css
+++ b/Module 15/positions.css
@@ -9,5 +9,33 @@ padding: :10px;
     height:300px;
     position:relative;
     padding:10px;
-left:50px;
-top:50px;}
+    left:100px;
+
+top:150px;}
+.absolute {border: 1px solid red;
+    width: 80px;
+    height:80px;
+    position:absolute;
+    padding: :10px;
+    left:40%;
+
+
+}
+.sticky {border: 1px solid red;
+    width:300px;
+    height:300px;
+    position:sticky;
+    padding: :10px;
+    left: 250px
+
+}
+.fixed {border: 1px solid red;
+    top:100px;
+    left:50px;
+    width:300px;
+    height:300px;
+    position:fixed;
+    padding: :10px;
+
+
+}
